--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -17,7 +17,9 @@
     "lucide-react": "^0.468.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "react-router-dom": "^7.0.2"
+    "react-router-dom": "^7.0.2",
+    "react-redux": "^9.2.0",
+    "@reduxjs/toolkit": "^2.5.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.15.0",
