--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,4 +1,5 @@
 {
-    "files.autoSave": "afterDelay",
-    "files.autoSaveDelay": 0
+  "files.autoSave": "afterDelay",
+  "files.autoSaveDelay": 0,
+  "editor.wordWrap": "on"
 }
