--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,6 @@
 {
   "files.autoSave": "afterDelay",
   "files.autoSaveDelay": 0,
-  "editor.wordWrap": "on"
+  "editor.wordWrap": "on",
+  "postman.settings.dotenv-detection-notification-visibility": false
 }
