--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -16,6 +16,7 @@
     "axios": "^1.7.9",
     "dotenv": "^16.4.7",
     "framer-motion": "^11.15.0",
+    "lodash": "^4.17.21",
     "lottie-react": "^2.4.0",
     "lucide-react": "^0.468.0",
     "react": "^18.3.1",
