--- a/Admin/package.json
+++ b/Admin/package.json
@@ -15,14 +15,14 @@
     "@types/react-router-dom": "^5.3.3",
     "axios": "^1.7.9",
     "dotenv": "^16.4.7",
+    "exceljs": "^4.4.0",
     "framer-motion": "^11.15.0",
     "lottie-react": "^2.4.0",
     "lucide-react": "^0.468.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-redux": "^9.2.0",
-    "react-router-dom": "^7.0.2",
-    "xlsx": "^0.18.5"
+    "react-router-dom": "^7.0.2"
   },
   "devDependencies": {
     "@eslint/js": "^9.15.0",
