--- a/SuperAdmin/package.json
+++ b/SuperAdmin/package.json
@@ -15,6 +15,7 @@
     "@types/react-router-dom": "^5.3.3",
     "axios": "^1.7.9",
     "dotenv": "^16.4.7",
+    "exceljs": "^4.4.0",
     "framer-motion": "^11.15.0",
     "lottie-react": "^2.4.0",
     "lucide-react": "^0.468.0",
