--- a/VendorAdmin/package.json
+++ b/VendorAdmin/package.json
@@ -13,6 +13,7 @@
     "@reduxjs/toolkit": "^2.5.0",
     "axios": "^1.7.9",
     "chart.js": "^4.4.9",
+    "dayjs": "^1.11.13",
     "dotenv": "^16.4.7",
     "framer-motion": "^11.15.0",
     "lucide-react": "^0.477.0",
