feat: Implement OTP verification via SMS for user registration; add SMS utility functions and update user models

--- a/Backend/package.json
+++ b/Backend/package.json
@@ -7,9 +7,10 @@
   "scripts": {
     "dev": "nodemon -r dotenv/config --experimental-json-modules src/index.js"
   },
-  "author": "kshitij",
+  "author": "Kshitij and Vivek",
   "license": "ISC",
   "dependencies": {
+    "axios": "^1.9.0",
     "bcrypt": "^5.1.1",
     "cloudinary": "^1.41.3",
     "cookie-parser": "^1.4.6",
