--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -20,6 +20,7 @@
     "lottie-react": "^2.4.0",
     "lucide-react": "^0.468.0",
     "react": "^18.3.1",
+    "react-custom-alert": "^1.0.4",
     "react-dom": "^18.3.1",
     "react-redux": "^9.2.0",
     "react-router-dom": "^7.0.2",
